# PX4-FlightGear-Bridge

./: .gitignore  .gitmodules  CMakeLists.txt  FG_run.py  FG_run.sh  LICENSE  README  README.md  TF-G1.json  fg_communicator.cpp  fg_communicator.h  flightgear_bridge.c  flightgear_bridge.cpp  geo_mag_declination.h  get_FGbridge_params.py  plane.json  px4_communicator.cpp  px4_communicator.h  px4bridge.xml  rascal-electric.json  rascal.json  run_alt_test.sh  tf-r1.json  vehicle_state.cpp  vehicle_state.h
.github/workflows/: build_tests.yml
cmake/: FindMAVLink.cmake
models/: rascal.json  tf-g1.json  tf-g2.json  tf-r1.json
scripts/: vehicle1.sh  vehicle2.sh
src/: fg_communicator.cpp  fg_communicator.h  flightgear_bridge.cpp  geo_mag_declination.cpp  geo_mag_declination.h  px4_communicator.cpp  px4_communicator.h  vehicle_state.cpp  vehicle_state.h
